# Day-Trading-Assistant

./: .dockerignore  .gitignore  CONTEXT.md  Dockerfile  deliverables.md  langgraph.json  pyproject.toml  skills-lock.json
app/rag/: chunk.py  extract.py  index.py  retrieve.py  rtl.py
app/trading/: domain.py  exposure.py  ledger.py  performance.py  pnl.py  quotes.py  scaleout.py  sizing.py  symbols.py
data/book/: IBKR YTD Statement.csv  Tactical_Boot.csv
docs/: build_plan.md  task1_problem_scope.md  task2_solution.md  task6_optional_refinements.md
docs/adr/: 0001-synthesis-first-upload-based-scope.md  0002-structured-portfolio-tools-rag-for-desk-reviews.md  0003-rules-as-runtime-writable-procedural-memory.md  (+4 more)
evals/: build_eval_dataset.py  eval_dataset.jsonl  rag_evaluation.py
frontend/: .env.local.example  package-lock.json  package.json
scripts/: preview_chunks.py
tests/: test_account_nav.py  test_agent_answer.py  test_agent_audit.py  test_agent_briefing.py  test_agent_multiturn.py  test_agent_policy.py  test_agent_prefetch.py  test_agent_scope.py  test_agent_toolloop.py  test_campaigns.py  test_campaigns_real.py  test_chunk.py  test_csv_router.py  test_exposure.py  test_extract.py  test_get_trades.py  test_index.py  test_instrument_exchanges.py  test_open_positions_cost.py  test_performance.py  test_pnl.py  test_quotes.py  test_retrieve.py  test_rtl_repair.py  test_scaleout.py  test_scaleout_real.py  test_sizing.py  test_splits.py  test_statement_parser.py  test_symbols.py  test_tactical_parser.py  test_yahoo_symbols.py  test_yahoo_symbols_real.py
(+31 files in other folders)
