[project]
name = "certification-challenge"
version = "0.1.0"
description = "AIEC1 Certification Challenge — end-to-end Agentic RAG (LangGraph + Qdrant + Tavily), RAGAS evals"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # --- Agent server (mirrors 09_Agent_Servers) ---
    "langchain>=1.0.0",
    "langgraph>=1.0.10",
    "langgraph-cli>=0.4.14",
    "langgraph-api>=0.4.28",
    "langchain-core>=1.2.16",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.4.1",
    "langchain-tavily>=0.1.0",
    "langchain-text-splitters>=1.1.1",
    "langchain-qdrant>=1.1.0",
    "qdrant-client>=1.17.0",
    "rank-bm25>=0.2.2",
    "pymupdf>=1.27.1",
    "tiktoken>=0.12.0",
    "python-dotenv>=1.2.2",
    # --- Evaluation harness (mirrors 10_LLM_Servers) ---
    "ragas>=0.4.3",
    "pandas>=3.0.3",
    "jupyter>=1.1.1",
    "yfinance>=1.5.1",
    "cohere>=7.0.5",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["app*"]
